--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
 
     <string name="profile_item_stars">Stars: %s</string>
     <string name="profile_item_language">Language: %s</string>
+    <string name="profile_item_issues">Issues: %s</string>
 </resources>
